--- a/app/contact-us/index.module.css
+++ b/app/contact-us/index.module.css
@@ -1,2 +1,43 @@
 .root {
+    font-size: 16px;
+    padding: 56px 0;
+    margin-top: 100px;
+}
+
+.container {
+    width: 725px;
+    max-width: 100%;
+    padding: 0 24px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    font-size: 22px;
+    text-align: center;
+    color: rgb(89, 89, 89);
+    line-height: 1.4;
+    margin-bottom: 40px;
+}
+
+.buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+.submitButton {
+    border: 1px solid rgb(27, 27, 27);
+    font-size: 14px;
+    padding: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.submitButton:hover {
+    background-color: rgb(216, 204, 200);
 }
