--- a/app/page.module.css
+++ b/app/page.module.css
@@ -17,3 +17,160 @@
     line-height: 1.5;
     font-size: 16px;
 }
+
+.oneCompany {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(22, 22, 22);
+    padding: 56px 0;
+}
+
+.oneCompany p {
+    font-size: 38px;
+    color: rgb(216, 204, 200);
+    font-family: 'Mulish', sans-serif;
+    text-align: center;
+    max-width: 40%;
+}
+
+.buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+.contactButton {
+    border: 1px solid rgb(216, 204, 200);
+    font-size: 14px;
+    color: rgb(216, 204, 200);
+    padding: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    font-family: Quicksand, sans-serif;
+}
+
+.contactButton::before {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.contactButton::after {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-left: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.contactButton:hover {
+    background-color: rgb(216, 204, 200);
+    color: rgb(22, 22, 22);
+}
+
+.about {
+    padding: 56px 0;
+}
+
+.about h2 {
+    font-size: 22px;
+    text-align: center;
+    color: rgb(89, 89, 89);
+    line-height: 1.4;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.container {
+    display: flex;
+    width: 1160px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.container > div {
+    width: 50%;
+    padding: 72px 40px;
+    color: white;
+    font-family: Quicksand, sans-serif;
+}
+
+.container > div:first-child {
+    background-image: linear-gradient(
+            rgba(22, 22, 22, 0.5) 0%,
+            rgba(22, 22, 22, 0.5) 100%
+        ),
+        url('/images/about-bg-1.webp');
+    background-size: auto, cover;
+}
+
+.container > div:last-child {
+    background-image: linear-gradient(
+            rgba(22, 22, 22, 0.5) 0%,
+            rgba(22, 22, 22, 0.5) 100%
+        ),
+        url('/images/about-bg-2.webp');
+    background-size: auto, cover;
+}
+
+.container h2 {
+    font-size: 16px;
+    margin-bottom: 24px;
+    font-weight: 700;
+    color: white;
+}
+
+.container p {
+    font-size: 16px;
+}
+
+.servicesButton {
+    border: 1px solid white;
+    font-size: 14px;
+    color: white;
+    padding: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    font-family: Quicksand, sans-serif;
+}
+
+.servicesButton::before {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.servicesButton::after {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-left: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.servicesButton:hover {
+    background-color: rgb(216, 204, 200);
+    color: rgb(22, 22, 22);
+}
