--- a/app/services/index.module.css
+++ b/app/services/index.module.css
@@ -1,6 +1,7 @@
 .root {
     font-size: 16px;
     padding: 56px 0;
+    margin-top: 100px;
 }
 
 .container {
@@ -61,6 +62,7 @@
     text-transform: uppercase;
     font-weight: 700;
 }
+
 .contactButton:hover {
     background-color: rgb(216, 204, 200);
 }
