--- a/app/page.module.css
+++ b/app/page.module.css
@@ -35,7 +35,14 @@
     max-width: 40%;
 }
 
+@media (max-width: 959px) {
+    .oneCompany p {
+        max-width: 90%;
+    }
+}
+
 .buttonContainer {
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,6 +114,16 @@
     font-family: Quicksand, sans-serif;
 }
 
+@media (max-width: 959px) {
+    .container {
+        flex-direction: column;
+    }
+    .container > div {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
 .container > div:first-child {
     background-image: linear-gradient(
             rgba(22, 22, 22, 0.5) 0%,
@@ -173,4 +190,36 @@
 .servicesButton:hover {
     background-color: rgb(216, 204, 200);
     color: rgb(22, 22, 22);
+}
+
+.images div {
+    cursor: pointer;
+}
+
+.images div img {
+    width: 100%;
+    height: 100%;
+}
+
+.inputContainer {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    width: 66.66%;
+    margin: 0 auto;
+}
+@media (max-width: 959px) {
+    .inputContainer {
+        width: 90%;
+    }
+}
+
+.fieldContainer {
+    margin-right: 24px;
+    flex-grow: 1;
+    color: rgb(191, 191, 191);
+}
+
+.fieldContainer input {
+    color: rgb(191, 191, 191);
 }
