--- a/pages/contact-us/index.module.css
+++ b/pages/contact-us/index.module.css
@@ -41,3 +41,14 @@
 .submitButton:hover {
     background-color: rgb(216, 204, 200);
 }
+
+@media (max-width: 959px) {
+    .buttonContainer,
+    .submitButton {
+        width: 100%;
+    }
+    .submitButton {
+        display: flex;
+        justify-content: center;
+    }
+}
