--- a/pages/about/index.module.css
+++ b/pages/about/index.module.css
@@ -1,6 +1,7 @@
 .root {
     font-size: 16px;
     padding: 56px 0;
+    margin-top: 50px;
 }
 
 .container {
@@ -76,12 +77,40 @@
 }
 
 .contactButton {
-    border: 1px solid rgb(27, 27, 27);
+    border: 1px solid rgb(216, 204, 200);
     font-size: 14px;
+    color: rgb(89, 89, 89);
     padding: 16px;
     text-transform: uppercase;
     font-weight: 700;
+    display: flex;
+    align-items: center;
+    font-family: Quicksand, sans-serif;
 }
+
+.contactButton::before {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.contactButton::after {
+    border-top: 1px solid;
+    width: 18px;
+    height: 0.1px;
+    content: '';
+    display: inline-block;
+    margin-left: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .contactButton:hover {
     background-color: rgb(216, 204, 200);
+    color: rgb(22, 22, 22);
 }
